[package]
name = "ws-client-no-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.17", features = ["rustls-tls-native-roots"] }
url = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"